<resources>
    <string name="app_name">Parcial Contactos</string>
    <string name="nombre_contacto">Nombre Contacto</string>
    <string name="escriba_nombre">Escriba Nombre...</string>
    <string name="tel_fono">Teléfono</string>
    <string name="escriba_tel_fono">Escriba Teléfono...</string>
    <string name="guardar">Guardar</string>
    <string name="seleccione_un_grupo">Seleccione un Grupo</string>
    <string name="familia">Familia</string>
    <string name="trabajo">Trabajo</string>
    <string name="amigo">Amigo</string>
    <string name="ocasional">Ocasional</string>
    <string name="cancelar">Cancelar</string>
    <string name="regresar">Regresar</string>
    <string name="ordenar_por_apellido">Ordenar por Apellido</string>
    <string name="ordenar_por_grupo">Ordenar por Grupo</string>
    <string name="eliminar_todos">Eliminar Todos</string>
    <string name="invertir_lista">Invertir Lista</string>
    <string name="opciones">Opciones</string>
    <string name="limpiar_datos">Limpiar Datos</string>
    <string name="lista_de_contactos">Lista de Contactos</string>
</resources>
